# chatbox

./: README.md  get_embedding_function.py  main.py  populate_database.py  pyproject.toml  query_data.py  test_rag.py  vector.py
chatbox_django/chatbox/templates/: base.html  home.html
chatbox_django/chatbox_django/: asgi.py  settings.py  urls.py  wsgi.py
