[project]
name = "chatbox"
version = "0.1.0"
description = "A chatbox application"
authors = [
    { name="Alexandre Pimont", email="alexandrepenha.geologia@gmail.com" }
]
dependencies = [
    "flask==2.2.5",
    "python-dotenv==1.1.1",
    "langchain-community==0.3.29",
    "ollama==0.5.3,
    "pypdf==6.0.0",
    "sentence-transformers==2.2.2",
    "faiss-cpu==1.12.0",
    "langchain-ollama==0.3.7",
    "chromadb==1.0.20"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"